--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "buefy": "^0.8.2",
     "core-js": "^2.6.5",
     "mongodb-stitch-browser-sdk": "^4.5.0",
+    "mongodb-stitch-browser-services-aws": "^4.5.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.2"
   },
