--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "mongodb-stitch-browser-sdk": "^4.5.0",
     "mongodb-stitch-browser-services-aws": "^4.5.0",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.2"
+    "vue-router": "^3.1.2",
+    "vuex": "^3.1.1",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.10.0",
     "@vue/cli-plugin-eslint": "^3.10.0",
+    "@vue/cli-plugin-vuex": "^4.0.0-alpha.4",
     "@vue/cli-service": "^3.10.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
