--- a/helpers/buildTree/package.json
+++ b/helpers/buildTree/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "assert": "^2.0.0",
+    "aws-sdk": "^2.533.0",
+    "axios": "^0.19.0",
+    "minimist": "^1.2.0",
     "mongodb": "^3.3.2"
   }
 }
