--- a/package.json
+++ b/package.json
@@ -8,28 +8,28 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "buefy": "^0.8.2",
-    "core-js": "^2.6.5",
-    "mongodb": "^3.3.2",
-    "mongodb-stitch-browser-sdk": "^4.5.0",
-    "mongodb-stitch-browser-services-aws": "^4.5.0",
-    "vue": "^2.6.10",
-    "vue-router": "^3.1.2",
-    "vuex": "^3.1.1",
-    "vuex-persistedstate": "^2.5.4"
+    "buefy": "^0.8.10",
+    "core-js": "^2.6.11",
+    "mongodb": "^3.5.2",
+    "mongodb-stitch-browser-sdk": "^4.8.0",
+    "mongodb-stitch-browser-services-aws": "^4.8.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.1.5",
+    "vuex": "^3.1.2",
+    "vuex-persistedstate": "^2.7.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.10.0",
-    "@vue/cli-plugin-eslint": "^3.10.0",
-    "@vue/cli-plugin-vuex": "^4.0.0-alpha.4",
-    "@vue/cli-service": "^3.10.0",
-    "babel-eslint": "^10.0.1",
+    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-plugin-vuex": "^4.1.2",
+    "@vue/cli-service": "^3.12.1",
+    "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
